--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@types/aos": "^3.0.7",
     "@types/react-router-hash-link": "^2.4.9",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
